# Modular-RAG

./: .gitignore  README.md  main.py  naive_rag.ipynb  pyproject.toml
examples/: generation_demo.py  index_demo.py  post_retrieval_demo.py  pre_retrieval_demo.py  retrieval_demo.py
nodes/: generation.py  indexing.py  post_retrieval.py  pre_retrieval.py  retrieval.py
nodes/generation_operators/: __init__.py  base.py  generator.py  postprocess.py  prompt.py  verification.py
nodes/indexing_operators/: __init__.py
nodes/operators/: __init__.py  base.py  embeddings.py  loaders.py  splitters.py  stores.py
nodes/post_retrieval_operators/: __init__.py  base.py  compression.py  rerank.py  selection.py
nodes/pre_retrieval_operators/: __init__.py  base.py  construction.py  expansion.py  transformation.py
nodes/retrieval_operators/: __init__.py  adaptive.py  base.py  dense.py  hybrid.py  sparse.py
nodes/strategies/: __init__.py  hierarchical.py
workflows/: rag_graph.py
